# pharo-tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  github_page.yml  publish-github-packages.yml  publish-pypi.yml
bindings/c/: tree-sitter-pharo.pc.in
bindings/c/tree_sitter/: tree-sitter-pharo.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pharo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPharoTests/: TreeSitterPharoTests.swift
docs/: .nojekyll  index.html  playground.js  styles.css  tree-sitter-pharo.wasm
queries/: highlights.scm
scripts/: tonel_to_methods.py
site/: README.md  index.html  playground.js  styles.css
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: arrays.txt  assignment.txt  blocks.txt  cascades.txt  comments.txt  literals.txt  message_sends.txt  method_body.txt  method_declarations.txt  pragma.txt  tonel.txt  tonel_methods.txt
