[package]
name = "tree-sitter-pharo"
description = "Pharo grammar for tree-sitter"
version = "0.1.0"
authors = ["pharo-llm <pharo-llm@pharo.org"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pharo"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/pharo-llm/pharo-tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
