[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharo-tree-sitter"
description = "Pharo grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "pharo"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kilian Kier", email = "kierkilian@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = ["tree-sitter~=0.24"]

[project.urls]
Homepage = "https://github.com/kilian-kier/tree-sitter-pharo"

[project.optional-dependencies]
core = []

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
